Exclude man page symlink in distribution (#2602)
This is a short-term solution to unblock the build process for the 1.3
release. A tool used in that process (cpio) is failing on a symlink in
the JDK man pages, so this is a hack to just remove that symlink. See
issue #2517 for more details.

Signed-off-by: Andrew Ross <andrross@amazon.com>

--- a/distribution/build.gradle
+++ b/distribution/build.gradle
@@ -420,6 +420,7 @@ configure(subprojects.findAll { ['archives', 'packages'].contains(it.name) }) {
         }
         from project.jdks."bundled_${platform}_${architecture}"
         exclude "demo/**"
+        exclude "man/ja/**"
         /*
          * The Contents/MacOS directory interferes with notarization, and is unused by our distribution, so we exclude
          * it from the build.
